# Recipe-Recommendation-KGAT

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_experiments.bat
docs/: api_reference.md  architecture.md  data_dictionary.md  development.md
docs/adr/: ADR-001-Retained-Decisions.md  ADR-001-remove-dgl-for-pure-pytorch.md  ADR-002-Superseded-Decisions.md  ADR-002-implement-real-attention-mechanism.md  ADR-003-Training-Optimization.md  ADR-003-optimize-colab-memory-training.md  ADR-004-Paper-Alignment.md  ADR-004-migrate-to-native-xpu-support.md  ADR-005-Ablation-Study-Architecture.md  ADR-005-integrate-interactions-into-graph.md  ADR-006-vram-optimization-recomputation.md  ADR-007-data-pruning-and-stability.md  ADR-008-metrics-and-logging-standardization.md  ADR-009-ablation-design-and-model-renaming.md  README.md
models/: MODELS.md  kgat_att_local_ckpt_e20.pth  kgat_checkpoint_e20.pth
models/log/: kgat.txt  kgat_att.txt
notebooks/: inference_xai.ipynb  inference_xai_attention.ipynb  train_attention_colab.ipynb  train_colab.ipynb
output/: explanations.json
output/explanations/: explanations.json  test_explanations.json
output/explanations/full_kgat/: att_explanation.json  kgat_e20_40users_explanations.json  kgat_e20_explanations.json
src/: diag_xpu.py  generate_explanations.py  run_explainer_attention.py  run_explainer_kgat.py  train.py  train_att.py  train_bi_interaction.py  train_xpu.py  verify_explainer.py
src/model/: explainer.py  explainer_attention.py  kgat.py  kgat_attention.py  kgat_bi_interaction.py
(+12 files in other folders)
