[project]
name = "experiment"
version = "1.0.0"
description = "Recipe Recommendation with KGAT and GraphExplainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "dgl",
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "networkx",
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
