[project]
name = "experiment"
version = "1.1.0"
description = "Recipe Recommendation with KGAT and GraphExplainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1+xpu",
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "networkx",
    "ipykernel"
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[tool.uv.sources]
torch = { index = "pytorch-xpu" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
